test/zinc_source/compile_errors/callables/04_incompatible_rebinding_arity.zn
// expected-error: incompatible callable signatures for variable 'f'
fn add(a, b) {
    return a + b
}

fn negate(x) {
    return -x
}

fn main() {
    f = add
    f = negate
    print(f(1, 2))
}
